bugfix!: scrollbar markup fixes

--- a/src/modules/esl-scrollbar/core/esl-scrollbar.less
+++ b/src/modules/esl-scrollbar/core/esl-scrollbar.less
@@ -4,7 +4,6 @@
     display: inline-block;
     position: absolute;
     cursor: default;
-    padding: 3px;
 
     &[inactive] {
       visibility: hidden;
@@ -41,7 +40,6 @@
         width: 6px;
         height: 100%;
         top: 0;
-        bottom: 0;
         margin: 0 5px;
       }
 
@@ -62,7 +60,7 @@
         height: 6px;
         width: 100%;
         bottom: 0;
-        margin-top: 5px;
+        margin: 5px 0;
       }
 
       .scrollbar-thumb {
